--- a/.github/workflows/macos_tests.yml
+++ b/.github/workflows/macos_tests.yml
@@ -48,4 +48,4 @@ jobs:
         
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run tests
-        run: pytest tests/
+        run: pytest -s tests/
