--- a/.github/workflows/windows_tests.yml
+++ b/.github/workflows/windows_tests.yml
@@ -46,6 +46,10 @@ jobs:
       - name: Install requirements
         run: python -m pip install --upgrade -r requirements.txt
         
+        # CHCP 65001
+      - name: CHCP 65001
+      - run: chcp 65001
+      
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run tests
         run: pytest -s tests/
